--- a/css/styles.css
+++ b/css/styles.css
@@ -102,11 +102,79 @@ h1 {
 	width: 80%;
 	margin-left: 10%;
 }
+/**************HOME PAGE ONLY****************/
+
+.mySlides {display: none;}
+img {vertical-align: middle;}
+
+/* Slideshow container */
+.slideshow-container {
+  max-width: 1000px;
+  position: relative;
+  margin: auto;
+}
+
+/* Caption text */
+.text {
+  font-size: 15px;
+  padding: 5px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.8s ease;
+}
+.dot-container {
+	text-align:center;
+	margin: 0px 0px 25px 0px;
+}
+
+.active {
+  background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.8s;
+  animation-name: fade;
+  animation-duration: 1.8s;
+}
+
+@-webkit-keyframes fade {
+  from {opacity: .3} 
+  to {opacity: 1}
+}
+
+@keyframes fade {
+  from {opacity: .3} 
+  to {opacity: 1}
+}
+
+.slideshow-container img {
+	margin: 25px 20% 10px 20%;
+}
+
+/**************************************************/
+
 /********************ABOUT PAGE ********************/
 .about-content {
 	width: 90%;
 	margin: 15px 5% 15px 5%;
 	font-size: 20px;
+}
+.about-content a {
+	color: #21710F;
 }
 
 /********************TEAM PAGE ********************/
