--- a/css/styles.css
+++ b/css/styles.css
@@ -102,6 +102,10 @@ h1 {
 	width: 80%;
 	margin-left: 10%;
 }
+#anvi-video {
+	width: 30%;
+	margin-left: 35%;
+}
 /**************HOME PAGE ONLY****************/
 
 .mySlides {display: none;}
@@ -149,6 +153,9 @@ img {vertical-align: middle;}
   -webkit-animation-duration: 1.8s;
   animation-name: fade;
   animation-duration: 1.8s;
+}
+.slide-img {
+	width: 60%;
 }
 
 @-webkit-keyframes fade {
@@ -210,7 +217,7 @@ img{
 #contact-subheading {
 	font-size: 20px;
 	text-align: center;
-	margin-top: 10px;
+	margin: 10px 15px 0px 15px;
 }
 
 @media (max-width: 767px) { /* Phone sizing, everything is different here.*/
@@ -220,21 +227,23 @@ img{
 		padding: 20px 5px 10px 5px;
 	}
 	#title {
-		font-size: 20px;
-		margin-top: 0px;
+		font-size: 18px;
+		margin-top: 5px;
+		margin-left: 5px;
 	}
 	#kannadaTitle {
-		margin-top: 40px;
+		margin-top: 30px;
+		font-size: 16px;
 	}
 	#menu-bar {
 		margin-top: 0px;
 	}
 	#logo-img {
-		background: url('logo-image.png') no-repeat;
-		width: 35px;
-		height: 26px;
-		margin: 0px 10px 0px 10px;
-		border: 3px solid #D0D0D0;
+		background: url('logo-image-small.png') no-repeat;
+		width: 70px;
+		height: 44px;
+		margin: 5px 5px 0px 0px;
+		border: 1px solid #D0D0D0;
 		box-shadow: 0 1px 2px 1px #D0D0D0;
 	}
 	#team, #contact, #about, #pr {
@@ -247,7 +256,7 @@ img{
 	  width: 0;
 	  position: fixed;
 	  z-index: 1;
-	  height: 250px;
+	  height: 200px;
 	  top: 0;
 	  right: 0;
 	  background-color: #000;
@@ -255,6 +264,9 @@ img{
 	  transition: 0.5s;
 	  padding-top: 60px;
 	  margin-right: 0px;
+	}
+	.homepage-sidepanel {
+		margin-right: 20px;
 	}
 	.sidepanel a {
 	  padding-bottom: 10px;
@@ -294,6 +306,28 @@ img{
 	.openbtn:hover {
 	  background-color:#8DF559;
 	}
+	.page-title {
+		text-align: center;
+		font-size: 22px;
+		font-weight: bold;
+		margin: 25px 15px 0px 15px;
+	}
+	.page-subtitle {
+		text-align: center;
+		font-size: 20px;
+		margin-top: 5px;
+	}
+	.text {
+		font-size: 10px;
+	}
+	.slideshow-container img {
+		width: 80%;
+		margin: 25px 10% 10px 10%;
+	}
+	.dot {
+	  height: 8px;
+	  width: 8px;
+	}
 	/*********************************************/
 	/********************RELEASES PAGE ********************/
 	.tile-container {
@@ -302,6 +336,9 @@ img{
 	.tile {
 		width: 100%;
 		padding-top: 100%;
+	}
+	.tile span {
+		font-size: 13px;
 	}
 	/********************************************/
 	/******************** INDIVIDUAL RELEASE PAGE ********************/
@@ -324,6 +361,7 @@ img{
 		height: auto;
 		margin-left: 20%;
 	}
+
 
 	/********************ABOUT PAGE ********************/
 	.about-content {
@@ -358,15 +396,15 @@ img{
 		float:right;
 	}
 	#logo-img {
-		background: url('logo-image.png') no-repeat;
-		width: 70px;
-		height: 70px;
-		margin: 0px 5px 0px 0px;
+		background: url('logo-image-medium.png') no-repeat;
+		width: 87px;
+		height: 54px;
+		margin: 15px 5px 0px 0px;
 		border: 3px solid #D0D0D0;
 		box-shadow: 0 1px 2px 1px #D0D0D0;
 	}
 	#title {
-		font-size: 23px;
+		font-size: 22px;
 		margin-bottom: 5px;
 	}
 	#pr {
@@ -378,7 +416,7 @@ img{
 		font-size: 17px;
 	}
 	#kannadaTitle {
-		font-size: 17px;
+		font-size: 16px;
 		margin-top: 35px;
 	}
 
