--- a/css/styles.css
+++ b/css/styles.css
@@ -186,9 +186,10 @@ img {vertical-align: middle;}
 
 /* Slideshow container */
 .slideshow-container {
-  max-width: 1000px;
+  width: 40%;
   position: relative;
   margin: auto;
+  text-align: center;
 }
 
 /* Caption text */
@@ -203,8 +204,8 @@ img {vertical-align: middle;}
 
 /* The dots/bullets/indicators */
 .dot {
-  height: 15px;
-  width: 15px;
+  height: 10px;
+  width: 10px;
   margin: 0 2px;
   background-color: #bbb;
   border-radius: 50%;
@@ -228,7 +229,8 @@ img {vertical-align: middle;}
   animation-duration: 1.8s;
 }
 .slide-img {
-	width: 60%;
+	/*width: 60%;*/
+	height: 250px;
 }
 
 @-webkit-keyframes fade {
@@ -242,9 +244,15 @@ img {vertical-align: middle;}
 }
 
 .slideshow-container img {
-	margin: 25px 20% 10px 20%;
+	margin-bottom: 15px;
+	width: auto;
 }
-
+.home-content {
+	width: 80%;
+	margin: 15px auto 15px auto;
+	font-size: 22px;
+	text-align: center;
+}
 /**************************************************/
 
 /********************ABOUT PAGE ********************/
@@ -402,7 +410,7 @@ img{
 		font-size: 10px;
 	}
 	.slideshow-container img {
-		width: 80%;
+		/*width: 80%;*/
 		margin: 25px 10% 10px 10%;
 	}
 	.dot {
